ensure text alignment is left by default for form components

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -24,6 +24,7 @@ form,
     overflow: hidden;
     line-height: 1;
     max-width: $max-form-width;
+    text-align: left;
 
     &.no-bottom-margin {
       margin-bottom: 0;
